--- a/css/alnaaim.css
+++ b/css/alnaaim.css
@@ -1,3 +1,7 @@
+body > main {
+  overflow-x: hidden;
+}
+
 /* ========== Landing Section ========== */
 .landing-section {
   padding: var(--section-padding);
